--- a/text/targeted_opt.tex
+++ b/text/targeted_opt.tex
@@ -15,7 +15,7 @@ A short study on ring percolation in amorphous graphene is also presented.
 \section{Disorder in Two\--Dimensional Networks}
 
 A central theme in this thesis is that the characterisation of the disorder in \td{} networks can be achieved through the ring structure. 
-For three\--coordinate atomic materials the mean ring size is constrained to six by Euler's law, which allows the variance of the ring size distribution, $\mu_2$, to act as a proxy measure for disorder (see sections \ref{s:eulerslaw}, \ref{s:lemaitre}).
+For three\--coordinate atomic materials the mean ring size is constrained to six by Euler's law, which allows the variance of the ring size distribution, $\mu_2$, to act as a proxy measure for disorder (see sections \ref{s:eulerslaw} and \ref{s:lemaitre}).
 The same set of ring statistics can however lead to a large number of different ring arrangements, as shown in figure \ref{fig:zach}.
 These can be further quantified by the \aw{} parameter, which measures the ring\--ring correlations.
 An interesting observation across a wide range of experimental systems, is that the measured value of the \aw{} parameter lies in a tight range of $\alpha\approx0.15\rightarrow 0.3$ \cite{Zsoldos1999}.
