--- a/thesis.tex
+++ b/thesis.tex
@@ -209,9 +209,9 @@
 %\include{text/bilayers}
 %\include{text/targeted_opt}
 %\include{text/general_networks}
-\include{text/quasi2d}
+%\include{text/quasi2d}
 %\include{text/procrystals}
-%\include{text/ph}
+\include{text/ph}
 %\include{text/conclusions}
 
 %% APPENDICES %% 
